--- a/dot_config/foot/foot.ini
+++ b/dot_config/foot/foot.ini
@@ -105,7 +105,7 @@
 alpha=0.5
 # alpha-mode=default # Can be `default`, `matching` or `all`
 background=111111
-foreground=aaff7f
+foreground=ffffff
 # flash=7f7f00
 # flash-alpha=0.5
 
