--- a/dot_config/hypr/hyprland.conf
+++ b/dot_config/hypr/hyprland.conf
@@ -33,9 +33,9 @@ monitor=,preferred,auto,auto
 
 # Set programs that you use
 $terminal = foot
-$fileManager = thunar
+$fileManager = pcmanfm
 $menu = fuzzel
-$wallpaper = /home/admin/Pictures/wallpapers/Carl_Friedrich_Lessing_-_Klosterhof_im_Schnee.jpg
+$wallpaper = /home/$USER/Pictures/wallpapers/Carl_Friedrich_Lessing_-_Klosterhof_im_Schnee.jpg
 $status_bar = waybar
 
 #################
@@ -48,7 +48,8 @@ $status_bar = waybar
 exec-once = $terminal
 # exec-once = nm-applet &
 exec-once = $status_bar
-exec = swaybg -i $wallpaper -m fill
+exec= pkill $status_bar; $status_bar
+exec = pkill swaybg; swaybg -i $wallpaper -m fill
 
 exec-once = wl-paste --type text --watch cliphist store # Stores only text data
 exec-once = wl-paste --type image --watch cliphist store # Stores only image data
@@ -62,7 +63,7 @@ exec-once = wl-paste --type image --watch cliphist store # Stores only image dat
 env = XCURSOR_SIZE,24
 env = XCURSOR_THEME,aero-drop
 env = HYPRCURSOR_SIZE,24
-
+env = QT_QPA_PLATFORMTHEME,qt5ct
 
 ###################
 ### PERMISSIONS ###
@@ -95,7 +96,7 @@ general {
     border_size = 2
 
     # https://wiki.hypr.land/Configuring/Variables/#variable-types for info about colors
-    col.active_border = rgba(aaff7faa)
+    col.active_border = rgba(ffffffaa)
     col.inactive_border = rgba(595959aa)
 
     # Set to true enable resizing windows by clicking and dragging on borders and gaps
@@ -257,6 +258,9 @@ bind = $mainMod SHIFT, F, fullscreen, 1
 
 # kew in background
 bind = $mainMod SHIFT, M, exec, sh -c 'foot -e tmux attach -t kew || foot -e tmux new -s kew kew'
+
+# screenshot region
+bind = , Print, exec, hyprshot -m region -o /home/$USER/Pictures/Screenshots/ --freeze
 
 #########################
 
