--- a/dot_config/hypr/hyprland.conf
+++ b/dot_config/hypr/hyprland.conf
@@ -2,6 +2,13 @@
 # ▛▌▌▌▛▌▛▘▐ ▀▌▛▌▛▌  ▛▘▛▌▛▌▜▘
 # ▌▌▙▌▙▌▌ ▐▖█▌▌▌▙▌▗ ▙▖▙▌▌▌▐ 
 #   ▄▌▌                     
+
+##############
+### CURSOR ###
+##############
+cursor {
+	no_hardware_cursors = 1
+}
 # https://wiki.hypr.land/Configuring/
 
 ################
