--- a/dot_config/hypr/hyprland.conf
+++ b/dot_config/hypr/hyprland.conf
@@ -42,7 +42,7 @@ $status_bar = waybar
 # Autostart necessary processes (like notifications daemons, status bars, etc.)
 # Or execute your favorite apps at launch like this:
 
-exec-once = $terminal
+exec-once = $terminal -e sh -c 'fastfetch; exec $SHELL'
 exec-once = sunsetr
 exec-once = $status_bar
 exec= pkill $status_bar; $status_bar
