--- a/dot_config/hypr/hyprland.conf
+++ b/dot_config/hypr/hyprland.conf
@@ -118,16 +118,18 @@ decoration {
         enabled = true
         range = 4
         render_power = 3
-        color = rgba(1a1a1aee)
+        color = rgba(111111ee)
     }
 
     # https://wiki.hypr.land/Configuring/Variables/#blur
     blur {
-        enabled = false
-        size = 3
-        passes = 1
-
-        vibrancy = 0.1696
+        enabled = true
+        size = 2
+        passes = 2
+        # noise = 0.01
+        # contrast = 1.0
+        # brightness = 1.0
+        xray = false
     }
 }
 
@@ -186,6 +188,13 @@ animations {
 #     border_size = 0
 #     rounding = 0
 # }
+
+windowrule {
+	name = blur-zathura
+	match:class = org.pwmt.zathura
+	
+	
+}
 
 # See https://wiki.hypr.land/Configuring/Dwindle-Layout/ for more
 dwindle {
