--- a/dot_config/hypr/hyprland.conf
+++ b/dot_config/hypr/hyprland.conf
@@ -94,7 +94,7 @@ general {
     border_size = 2
 
     # https://wiki.hypr.land/Configuring/Variables/#variable-types for info about colors
-    col.active_border = rgba(ffffffff)
+    col.active_border = rgba(ffa500ff)
     col.inactive_border = rgba(ffffff22)
 
     # Set to true enable resizing windows by clicking and dragging on borders and gaps
@@ -238,8 +238,6 @@ input {
     }
 }
 
-# See https://wiki.hypr.land/Configuring/Gestures
-gesture = 3, horizontal, workspace
 
 # Example per-device config
 # See https://wiki.hypr.land/Configuring/Keywords/#per-device-input-configs for more
@@ -254,38 +252,28 @@ device {
 ###################
 
 # See https://wiki.hypr.land/Configuring/Keywords/
-$mainMod = SUPER # Sets "Windows" key as main modifier
+$mainMod = SUPER # 'Windows' key
 
 
+# https://wiki.hypr.land/Configuring/Binds/
 
-##########################
-### CUSTOM KEYBINDINGS ###
-##########################
-
-# fullscreen
+# Fullscreen active window
 bind = $mainMod SHIFT, F, fullscreen, 1
 
-# kew in background
+# Open kew
 bind = $mainMod SHIFT, M, exec, sh -c 'foot -e tmux attach -t kew || foot -e tmux new -s kew kew'
 
-# screenshot region
+# Screenshot region
 bind = , Print, exec, hyprshot -m region -o /home/$USER/Pictures/Screenshots/ --freeze
 
-# lock screen
+# Lock screen
 bind = $mainMod, L, exec, hyprlock
 
-#########################
-
-# Example binds, see https://wiki.hypr.land/Configuring/Binds/ for more
 bind = $mainMod, Q, exec, $terminal
-bind = $mainMod, C, killactive,
-# bind = $mainMod, M, exec, command -v hyprshutdown >/dev/null 2>&1 && hyprshutdown || hyprctl dispatch exit
+bind = $mainMod, C, killactive, 1
 bind = $mainMod, E, exec, $fileManager
 bind = $mainMod, V, togglefloating,
 bind = $mainMod, R, exec, $menu
-bind = $mainMod, P, pseudo, # dwindle
-bind = $mainMod, J, togglesplit, # dwindle
-
 
 
 # Move focus with mainMod + arrow keys
@@ -318,9 +306,6 @@ bind = $mainMod SHIFT, 8, movetoworkspace, 8
 bind = $mainMod SHIFT, 9, movetoworkspace, 9
 bind = $mainMod SHIFT, 0, movetoworkspace, 10
 
-# Example special workspace (scratchpad)
-bind = $mainMod, S, togglespecialworkspace, magic
-bind = $mainMod SHIFT, S, movetoworkspace, special:magic
 
 # Scroll through existing workspaces with mainMod + scroll
 bind = $mainMod, mouse_down, workspace, e+1
