--- a/dot_config/foot/foot.ini
+++ b/dot_config/foot/foot.ini
@@ -102,10 +102,10 @@ font=monospace:size=10
 # long-press-delay=400
 
 [colors]
-alpha=0
+alpha=1
 # alpha-mode=default # Can be `default`, `matching` or `all`
 background=000000
-foreground=ffffff
+foreground=ffa500
 # flash=7f7f00
 # flash-alpha=0.5
 
