--- a/dot_config/fastfetch/config.jsonc
+++ b/dot_config/fastfetch/config.jsonc
@@ -1,10 +1,11 @@
 {
 	"$schema": "https://github.com/fastfetch-cli/fastfetch/raw/dev/doc/json_schema.json",
 	"logo": {
+		"type": "file-raw",
 		"source": "$HOME/Documents/ascii.txt",
 		"color": {
-			"1": "white",
-			"2": "white"
+			"1": "black",
+			"2": "black"
 		}
 	},
 	"display": {
