--- a/dot_config/waybar/config.jsonc
+++ b/dot_config/waybar/config.jsonc
@@ -27,8 +27,8 @@
         "backlight",
         "keyboard-state",
         "sway/language",
-        //"battery",
-        "battery#bat2",
+        "battery",
+        // "battery#bat2",
         "clock",
         "tray"//,
         // "custom/power"
@@ -133,7 +133,7 @@
     },
     "backlight": {
         // "device": "acpi_video1",
-        "format": "{percent}% {icon}",
+        "format": "{percent}% backlight",
         "format-icons": ["", "", "", "", "", "", "", "", ""]
     },
     "battery": {
