--- a/dot_config/hypr/hyprland.conf
+++ b/dot_config/hypr/hyprland.conf
@@ -46,11 +46,11 @@ $status_bar = waybar
 exec-once = $terminal -e sh -c 'fastfetch; exec $SHELL'
 exec-once = sunsetr
 exec-once = $status_bar
-exec= pkill $status_bar; $status_bar
+exec = pkill $status_bar; $status_bar
 exec = pkill swaybg; swaybg -i $wallpaper -m fill
-
-exec-once = wl-paste --type text --watch cliphist store # Stores only text data
-exec-once = wl-paste --type image --watch cliphist store # Stores only image data
+# 
+# exec-once = wl-paste --type text --watch cliphist store # Stores only text data
+# exec-once = wl-paste --type image --watch cliphist store # Stores only image data
 
 #############################
 ### ENVIRONMENT VARIABLES ###
@@ -103,7 +103,7 @@ general {
     # Please see https://wiki.hypr.land/Configuring/Tearing/ before you turn this on
     allow_tearing = false
 
-    layout = master
+    layout = dwindle
 }
 
 # https://wiki.hypr.land/Configuring/Variables/#decoration
